--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public",
+    "deploy-storybook": "storybook-to-ghpages",
     "watcher": "tsc -w"
   },
   "eslintConfig": {
@@ -65,6 +66,7 @@
     "@storybook/node-logger": "^6.3.10",
     "@storybook/preset-create-react-app": "^3.2.0",
     "@storybook/react": "^6.3.10",
+    "@storybook/storybook-deployer": "^2.8.10",
     "storybook-react-i18next": "^1.0.10"
   }
 }
