--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public",
     "deploy-storybook": "storybook-to-ghpages",
-    "watcher": "tsc -w"
+    "watcher": "tsc -w",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -67,6 +68,7 @@
     "@storybook/preset-create-react-app": "^3.2.0",
     "@storybook/react": "^6.3.10",
     "@storybook/storybook-deployer": "^2.8.10",
+    "gh-pages": "^3.2.3",
     "storybook-react-i18next": "^1.0.10"
   }
 }
